--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="hero-section">
         <div class="hero-content">
             <div class="profile-photo-container">
-                <img src="https://via.placeholder.com/150" alt="Zahra Waezzada Profile Photo" class="profile-photo">
+                <img src="https://github.com/Zarawin-byte/portfolio/blob/main/my-profile-photo.jpg" class="profile-photo">
             </div>
             <h1>Zahra Waezzada</h1>
             <p class="tagline">Aspiring Product Manager | UW CSE | Building Inclusive Tech</p>
