--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="contact-icons">
             <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="mailto:zahra.waezzada@email.com" aria-label="Email"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:zahrawaezzada@email.com" aria-label="Email"><i class="fa-solid fa-envelope"></i></a>
             <a href="https://github.com/" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
         </div>
     </footer>
